@@ -1,5 +1,10 @@
 2009-02-05  Vivien Malerba <malerba@gnome-db.org>
 
+	* libgda/gda-attributes-manager.c: applied patch for bug #569399 (tanks
+	to Carl-Anton Ingmarsson)
+
+2009-02-05  Vivien Malerba <malerba@gnome-db.org>
+
 	* libgda/gda-attributes-manager.c: added locking in case several threads use
 	the same GdaAttributeManager at the same time, this may be the problem for
 	Anjuta bug #569399
